--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "Selvania-Launcher",
+    "name": "AdventureLife-Launcher",
     "preductname": "Selvania Launcher",
-    "version": "1.2.0",
+    "version": "1.0.0",
     "description": "Launcher Mincraft custom (crack, premium)",
     "main": "src/app.js",
     "author": "Luuxis",
-    "url": "http://craftdium.ml/launcherSelvania",
+    "url": "http://adventurelife.luuxis.fr",
     "engines": {
         "node": "^18.x.x"
     },
@@ -31,6 +31,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/luuxis/Selvania-Launcher.git"
+        "url": "git+https://github.com/luuxis-fiverr/AdventureLife-Launcher.git"
     }
 }
