--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "AdventureLife-Launcher",
-    "preductname": "Selvania Launcher",
+    "preductname": "AdventureLife Launcher",
     "version": "1.0.0",
     "description": "Launcher Mincraft custom (crack, premium)",
     "main": "src/app.js",
